@@ -2,23 +2,31 @@ package com.cinema.api.entity;
 
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "administrators")
 public class Administrator implements UserDetails {
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
+
     private String fullName;
+
     @Column(unique = true, nullable = false)
     private String login;
+
     @Column(nullable = false)
     private String password;
+
     private Boolean active = true;
+
+    @Column(nullable = false)
+    private String role = "ROLE_ADMIN";  // по умолчанию ADMIN
 
     public Administrator() {}
 
@@ -26,31 +34,46 @@ public class Administrator implements UserDetails {
         this.fullName = fullName;
         this.login = login;
         this.password = password;
+        this.role = "ROLE_ADMIN";
     }
 
+    // Геттеры и сеттеры
     public Long getId() { return id; }
     public void setId(Long id) { this.id = id; }
+
     public String getFullName() { return fullName; }
     public void setFullName(String fullName) { this.fullName = fullName; }
+
     public String getLogin() { return login; }
     public void setLogin(String login) { this.login = login; }
+
     public String getPassword() { return password; }
     public void setPassword(String password) { this.password = password; }
+
     public Boolean getActive() { return active; }
     public void setActive(Boolean active) { this.active = active; }
 
+    public String getRole() { return role; }
+    public void setRole(String role) { this.role = role; }
+
+    // Реализация UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(role));
     }
+
     @Override
     public String getUsername() { return login; }
+
     @Override
     public boolean isAccountNonExpired() { return true; }
+
     @Override
     public boolean isAccountNonLocked() { return true; }
+
     @Override
     public boolean isCredentialsNonExpired() { return true; }
+
     @Override
     public boolean isEnabled() { return active; }
 }
